Docs: Added specific ADMIN_EMAIL setting to specifications and dev log

--- a/devlog_20251228.md
+++ b/devlog_20251228.md
@@ -22,6 +22,7 @@
 - **Neon Auth連携**: アプリ独自のログイン・新規登録画面を実装。
 - **ユーザー識別**: `user_id` カラムを導入し、同一テーブル内でのユーザーデータ分離を実現。
 - **管理者ダッシュボード**: `ADMIN_EMAIL` による権限管理。ユーザー一覧閲覧とパスワードリセット機能を搭載。
+- **管理者設定完了**: `s3792.01@gmail.com` を管理者として `.env` および Render に設定。
 
 ## コミット履歴
 - `5a63c5b`: PostgreSQL移行完了
