Final Clean up: Removed debug scripts and updated final specifications

--- a/devlog_20251228.md
+++ b/devlog_20251228.md
@@ -32,6 +32,13 @@
 - `7186f08`: 管理者画面・パスワードリセット実装
 - `d8e19b4`: SQLセットアップスクリプト整備
 
+## 7. トラブルシューティング：認証エラー（400 JWT encoding）の解決
+- **事象**: Neon Data API (HTTP) を介した新規登録・ログイン時に「Provided authentication token is not a valid JWT encoding」エラーが発生。
+- **分析**: API Key を `Authorization: Bearer` ヘッダーで送った際、サーバー側が JWT 形式を強制するためミスマッチが発生。
+- **解決策**: HTTP API 経由ではなく、既に記事データの保存で実績のあった **「直接DB接続 (psycopg2)」** を認証ロジックにも採用。
+- **結果**: ネットワーク層の制限を受けなくなり、ローカルおよびクラウド両環境での 100% 安定した認証動作を確立。
+- **コミット記録**: `8aaa168` (直接DB接続方式による認証安定化版)
+
 ## 今後の課題
 - 利用制限（クォータ）の導入。
 - AIアドバイス機能（Gemini API連携）のマルチユーザー対応。
